Mention supplemental figures and correct panel numbers.

--- a/vignettes/DistanceMeasures.Rmd
+++ b/vignettes/DistanceMeasures.Rmd
@@ -21,8 +21,8 @@ We want to put numbers on visual impressions such as:
  - Aligned regions are more "off the diagonal" on short arms than on long arms.
  - …
  
-The _strand randomisation indexes_ computed below are called _scrambling index_
-in the manuscript and displayed in its Table 1.
+** Figure 1D's _scrambling index_ table is computed here under the name
+_strand randomisation indexes_.**
 
 # Load R pacakges and data
 
