Old syntax fix.

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -479,7 +479,7 @@ p9 <- orthoBlocks$Osa_Kum |> gg_stat_hist_genes() + ggtitle("Osa-Kum: synteny bl
 
 That's all well and good. Unfortunately, none of these are very beautiful. How about binning the synteny blocks into a nice barplot instead?
 
-```{r synteny_block_histograms_3, fig.width=8, fig.height=6, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}}
+```{r synteny_block_histograms_3, fig.width=8, fig.height=6, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
 num_vec_to_bins <- function(num_vec, return="n", from=1, to=100, by=10){
   starts <- seq(from=from, to=to, by=by)
   ends <- seq(from=by, to=to, by=by)
